fix font size and spacing issue

--- a/src/votingcard.css
+++ b/src/votingcard.css
@@ -23,7 +23,7 @@
 }
 
 .home-page {
-  background-image: url("../public/bg.jpeg");
+  background-color: black;
   height: 100vh;
 }
 
